# pain001-mcp

./: .codecov.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  .safety-policy.yml  ARCHITECTURE.md  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  MANIFEST.in  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  glama.json  pyproject.toml  server.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  mcp-inspect.yml  nightly.yml  pr.yml  publish-mcp.yml  release.yml  security.yml
docs/: Makefile  api.md  conf.py  index.md
examples/: 01_mcp_tools.py  02_validate_pipeline.py  03_parse_bank_replies.py  README.md
pain001_mcp/: __init__.py  server.py
scripts/: verify_versions.py
tests/: conftest.py  test_llm_ergonomics.py  test_mcp_server.py  test_stdio_e2e.py
tests/fixtures/: camt053_sample.xml  pain002_sample.xml
