[tool.poetry]
name = "pain001-mcp"
version = "0.0.53"
description = "Model Context Protocol (MCP) server exposing the pain001 ISO 20022 Customer Credit Transfer Initiation library as agent tools."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/pain001-mcp"
homepage = "https://pain001.com"
packages = [
    { include = "pain001_mcp" },
]

[tool.poetry.scripts]
pain001-mcp = "pain001_mcp.server:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pain001 = ">=0.0.52"
mcp = ">=1.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=6.0.0,<8.0.0"
black = ">=24,<27"
ruff = "^0.1.0"
mypy = "^1.11.0"
bandit = "^1.7.0"
interrogate = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ["-ra", "--strict-markers", "--tb=short"]

[tool.coverage.run]
branch = true
source = ["pain001_mcp"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "@overload",
]
fail_under = 100
show_missing = true
skip_covered = false

[tool.interrogate]
fail-under = 100
ignore-init-method = true
ignore-semiprivate = false
ignore-private = false
ignore-magic = true
exclude = ["tests", "examples"]

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["*.md", "tmp_env", ".venv", ".eggs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
exclude = [
    "tmp_env/",
    ".venv/",
    ".eggs/",
]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pain001.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The tools mirror the (untyped) pain001 public API verbatim, returning
# bare dict/list/str. Relax the two strict checks that signature would trip
# (generic dict/list args and Any propagated from the library) while keeping
# the rest of strict mode in force.
module = "pain001_mcp.*"
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = ["arg-type", "return-value", "attr-defined", "assignment"]
